# duck-analyzer

./: .gitignore  ChangeLog.md  Duck.hs  LICENSE  Main.hs  README.md  duck.cabal  graph.hs  matrix.hs  search.hs  sort.hs
Duck/: Analysis.hs  Hypothesis.hs  Plot.hs  Statistics.hs  Types.hs  Utils.hs
